name:                ghcjs-hasher
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/plow-technologies/ghcjs-hasher#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin Cotrone
maintainer:          kevincotrone@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
extra-source-files:  jsbits/hasher.js
                     jsbits/signals.js
cabal-version:       >=1.10

library
  js-sources:          jsbits/hasher.js
                       jsbits/signals.js
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     GHCJS.Hasher
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ghcjs-hasher